[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "LinuxDoSpace"
version = "0.3.0a4"
description = "LinuxDoSpace Python SDK for HTTPS mail streaming"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "MoYeRanQianZhi" }
]
license = "MIT"
urls = { Homepage = "https://github.com/MoYeRanqianzhi/LinuxDoSpacePythonSDK", Repository = "https://github.com/MoYeRanqianzhi/LinuxDoSpacePythonSDK", Issues = "https://github.com/MoYeRanqianzhi/LinuxDoSpacePythonSDK/issues" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["LinuxDoSpace*"]
